force-app/main/default/objects/Services_Charge__c/Services_Charge__c.object-meta.xml
<CustomObject>
    <description>Junction Object for keeping the pricing details of service and product.
Salesforce Case Study for N26</description>
    <label>Services Charge</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services Charge</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>