force-app/main/default/objects/Services_Charge__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Services Charge</relationshipLabel>
    <relationshipName>Services_Charge</relationshipName>
    <type>Lookup</type>
</CustomField>